# gadgets

./: .pre-commit-config.yaml  LICENSE  README.md  __init__.py  astroeqs.py  fermi.py  pluto.ipynb  pluto.py  pyproject.toml  ruff.toml  setup.cfg
.github/: dependabot.yml
.github/workflows/: release-please.yml
from_int/: README.md  streamplot.py
pyPLUTO/: Image.py  Tools.py  __init__.py  pload.py  ploadparticles.py
pytools/: CHANGELOG.md  README.md  astroeqs.py  fermi.py  pluto_tools.py  pyproject.toml  tools.py
pytools/src/: tools.py
pytools/xsk_pytools/: fermi.py  logger.py  pluto_tools.py  radiation.py  tools.py
scripts/: README.md  abbr.py  power_law_synchrotron.py
utilities/: tools.py
