[metadata]
name = pytools_xsk
version = 0.1.0
description = A Python toolbox for daily research
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/xshaokun/gadgets/tree/main/pytools
author = Shaokun Xie
author_email = xshaokun@foxmail.com
license_file = LICENSE
classifiers=
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Natural Language :: English
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8

[options]
packages = find:
python_requires = >=3.6
