[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "astro_pytools"
version = "0.1.1"
description = "A Python toolbox for personal daily research"
readme = "README.md"
requires-python = ">=3.6"
license = {file = "LICENSE"}
keywords = ["astronomy astrophysics"]
authors = [
    {name = "Shaokun Xie", email="xshaokun@foxmail.com"},
    ]
classifiers=[
    "Development Status :: 1 - Planning",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Astronomy",
]
dependencies = [
    "pandas",
    "fire",
    "numpy",
    "matplotlib",
    "astropy",
]

[project.urls]
repository = "https://github.com/xshaokun/gadgets/tree/main/pytools"
changelog = "https://github.com/xshaokun/gadgets/blob/main/pytools/CHANGELOG.md"
